--- a/Estudos_Angular/ClientApp/app/components/app/app.component.html
+++ b/Estudos_Angular/ClientApp/app/components/app/app.component.html
@@ -5,7 +5,7 @@
         </div>
         <div class='col-sm-9 body-content'>
             <router-outlet></router-outlet>
-            <favorite [isFavorite]="post.isFavorite"></favorite>
+            <favorite [isFavorite]="post.isFavorite" (change)="onFavoriteChanged()"></favorite>
         </div>
     </div>
 </div>
