--- a/Estudos_Angular/ClientApp/app/components/favorite/favorite.component.html
+++ b/Estudos_Angular/ClientApp/app/components/favorite/favorite.component.html
@@ -1,5 +1,5 @@
 ﻿<span class="glyphicon"
-      [class.glyphicon-star]="isFavorite"
-      [class.glyphicon-star-empty]="!isFavorite"
+      [class.glyphicon-star]="isSelected"
+      [class.glyphicon-star-empty]="!isSelected"
       (click)="onClick()">
 </span>
