--- a/Estudos_Angular/ClientApp/app/components/contact/contact.component.html
+++ b/Estudos_Angular/ClientApp/app/components/contact/contact.component.html
@@ -1,11 +1,12 @@
 ﻿<form>
     <div class="form-group">
         <label for="firstName">First Name</label>
-        <input id="firstName" type="text" value="" class="form-control" />
+        <input required ngModel name="firstName" #firstName="ngModel" (change)="log(firstName)" id="firstName" type="text" value="" class="form-control" />
+        <div class="alert alert-danger" *ngIf="firstName.touched && !firstName.valid">First Name is Required.</div>
     </div>
     <div class="form-group">
         <label for="comment">Comment</label>
-            <textarea class="form-control" cols="30" rows="10" id="comment">
+            <textarea ngModel name="comment" class="form-control" cols="30" rows="10" id="comment">
             </textarea>
     </div>
     <button class="btn btn-primary">Submit</button>
