- Novas técnicas para Form!

--- a/Estudos_Angular/ClientApp/app/components/contact/contact.component.html
+++ b/Estudos_Angular/ClientApp/app/components/contact/contact.component.html
@@ -17,18 +17,34 @@
             <div *ngIf="firstName.errors.required">
                 First Name is Required!
             </div>
-            <div *ngIf="firstName.errors.minlength">
+            <div 
+                 *ngIf="firstName.errors.minlength">
                 FirstName should be minimum {{ firstName.errors.minlength.requiredLength }} characters!
             </div>
-            <div *ngIf="firstName.errors.pattern">
+            <div 
+                 *ngIf="firstName.errors.pattern">
                 FirstName should be 'banana' (pattern)
             </div>
-        </div>
     </div>
     <div class="form-group">
         <label for="comment">Comment</label>
-        <textarea ngModel name="comment" class="form-control" cols="30" rows="10" id="comment">
+        <textarea   [(ngModel)]="contact.comment" name="comment" class="form-control" cols="30" rows="10" id="comment">
             </textarea>
     </div>
-    <button class="btn btn-primary">Submit</button>
+    <div class="checkbox">
+        <label><input type="checkbox" value="" [(ngModel)]="contact.isSubscribed" name="isSubscribed" />Subscribe to mailing list</label>
+
+    </div>
+        <div class="form-group">
+            <label for="contactMethod">Contact Method</label>
+            <select [(ngModel)]="contact.contactMethod" name="contactMethod" id="contactMethod" class="form-control"> <!--multiple-->
+                <option value=""></option>
+                <option *ngFor="let cm of contactMethodOptions" [value]="cm.id">{{ cm.name }}</option> <!-- [ngValue]="cm" mostra o objeto inteiro no value -->
+            </select>
+        </div>
+        <p>
+            {{ f.value | json }}
+        </p>
+    <button class="btn btn-primary" [disabled]="!f.valid">Submit</button>
+        </div>
 </form>
