--- a/Estudos_Angular/ClientApp/app/components/app/app.component.html
+++ b/Estudos_Angular/ClientApp/app/components/app/app.component.html
@@ -1,12 +1,14 @@
 <div class='container-fluid'>
- <!--  <div class='row'>
+   <div class='row'>
         <div class='col-sm-3'>
             <nav-menu></nav-menu>
         </div>
         <div class='col-sm-9 body-content'>
             <router-outlet></router-outlet>
         </div>
-    </div> --> 
+    </div> 
+
+    <!--
     <p class="ex-estudos">Estudos Forms</p>
     <contact-form></contact-form>
     <br /><br />
@@ -118,5 +120,6 @@
                     Conteudo
                 </app-colapse>
             </div>
-        </div>
+        </div> -->
 </div>
+       
