- Estudando Reactive Form!!

--- a/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -32,6 +32,16 @@
                         <span class='glyphicon glyphicon-th-list'></span> Caixinhas
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/reactive-form']">
+                        <span class='glyphicon glyphicon-heart'></span> Reactive Forms
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/new-courses']">
+                        <span class='glyphicon glyphicon-pencil'></span> New Courses - Reactive Forms
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
