--- a/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -42,6 +42,11 @@
                         <span class='glyphicon glyphicon-pencil'></span> New Courses - Reactive Forms
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/posts']">
+                        <span class='glyphicon glyphicon-glass'></span> Posts - Data Fakes
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
