--- a/Estudos_Angular/ClientApp/app/components/posts/posts.component.html
+++ b/Estudos_Angular/ClientApp/app/components/posts/posts.component.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+﻿
+<input type="text"  class="form-control" placeholder="Title of new post" (keyup.enter)="createPost(title)" #title />
 
-</body>
-</html>
+<ul class="list-group">
+    <li 
+        class="list-group-item" 
+        *ngFor="let post of posts">
+        {{ post.title }}
+    </li>
+</ul>
