--- a/Estudos_Angular/ClientApp/app/components/posts/posts.component.html
+++ b/Estudos_Angular/ClientApp/app/components/posts/posts.component.html
@@ -5,6 +5,13 @@
     <li 
         class="list-group-item" 
         *ngFor="let post of posts">
+        <button 
+                (click)="updatePost(post)"
+                class="btn default btn-sm">Update</button>
+        <button (click)="deletePost(post)"
+                class="btn default btn-sm">
+            Delete
+        </button>
         {{ post.title }}
     </li>
 </ul>
