--- a/Estudos_Angular/ClientApp/app/components/filter-supplier/filter-supplier.component.html
+++ b/Estudos_Angular/ClientApp/app/components/filter-supplier/filter-supplier.component.html
@@ -1,21 +1,27 @@
 ﻿<h2>Filtros - Suppliers</h2>
+
+
 <div class="form-group">
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="Brasil">
-        <label class="form-check-label" for="inlineCheckbox1">Brasil</label>
+    {{ filtroCidades | json }}
+    <div *ngFor="let estado of filtroCidades.estados; let i = index" class="checkbox">
+        <label for="estados">
+            <input type="checkbox" 
+                   id="{{i}}"
+                    [checked]="filtroCidades.id.includes(i)"
+                   (change)="addIds(i, $event)"
+                   [disabled]="filtroCidades.id.length == 1"
+                   > 
+            {{ estado }}
+        </label>
     </div>
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="France">
-        <label class="form-check-label" for="inlineCheckbox2">France</label>
-    </div>
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Canada" disabled>
-        <label class="form-check-label" for="inlineCheckbox3">Canada</label>
-    </div>
-    <div class="form-check form-check-inline">
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="Canada" disabled>
-        <label class="form-check-label" for="inlineCheckbox3">Canada</label>
-    </div>
+</div>
+<div class="form-group">
+    aqui
+    <ul>
+        <li *ngFor="let filtrado of supplierListFilter">
+            {{ filtrado.CompanyName }} - {{ filtrado.ContactName }} - {{ filtrado.Country }} - {{ filtrado.City }}
+        </li>
+    </ul>
 </div>
 <div class="well">
     <div class="form-group">
