--- a/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -47,6 +47,12 @@
                         <span class='glyphicon glyphicon-glass'></span> Posts - Data Fakes
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/ngx']">
+                        <span class='glyphicon glyphicon-grain'></span> NGX - Bootstrap
+                    </a>
+                </li>
+
             </ul>
         </div>
     </div>
