--- a/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -52,6 +52,16 @@
                         <span class='glyphicon glyphicon-grain'></span> NGX - Bootstrap
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/git-followers']">
+                        <span class='si-glyph-alien'></span> Github-Followers
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/git-followers']">
+                        <span class='si-glyph-alien'></span> Github-Profile
+                    </a>
+                </li>
 
             </ul>
         </div>
