--- a/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -1,3 +1,4 @@
+<script src="https://cdn.rawgit.com/download/glyphicons/0.1.0/glyphicons.js"></script>
 <div class='main-nav'>
     <div class='navbar navbar-inverse'>
         <div class='navbar-header'>
@@ -53,13 +54,8 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/git-followers']">
+                    <a [routerLink]="['/followers']">
                         <span class='si-glyph-alien'></span> Github-Followers
-                    </a>
-                </li>
-                <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/git-followers']">
-                        <span class='si-glyph-alien'></span> Github-Profile
                     </a>
                 </li>
 
