--- a/Estudos_Angular/ClientApp/app/components/admin/admin.component.html
+++ b/Estudos_Angular/ClientApp/app/components/admin/admin.component.html
@@ -1,5 +1,5 @@
 ﻿<h1>Admin</h1>
 <h2>Orders</h2>
 <ul>
-    <li *ngFor="let order of orders">{{ order }}</li>
+    <li *ngFor="let order of orders">{{ order.ShipName }}</li>
 </ul>
