- Paleta de Cores - Estudos Eintein

--- a/Estudos_Angular/ClientApp/app/components/counter/counter.component.html
+++ b/Estudos_Angular/ClientApp/app/components/counter/counter.component.html
@@ -7,7 +7,7 @@
                     <h2>  {{ c.name }}</h2>
                 </ng-container>
                 <div class="body">
-                    <h3>{{ c.cidade }}</h3>
+                    <h3>{{ c.chex }}</h3>
                     <p>{{c.tweet?.body}}</p>
                 </div>
             </bootstrap-panel>
