--- a/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -34,6 +34,11 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/einstein-estudos']">
+                        <span class='glyphicon glyphicon-th-list'></span> Einstein-Estudos
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/reactive-form']">
                         <span class='glyphicon glyphicon-heart'></span> Reactive Forms
                     </a>
