--- a/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -65,6 +65,11 @@
                         <span class='si-glyph-alien'></span> Github-Followers
                     </a>
                 </li>
+                <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/app-pesquisa']">
+                        <span class='si-glyph-alien'></span> Pesquisa
+                    </a>
+                </li>
 
             </ul>
         </div>
