--- a/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/Estudos_Angular/ClientApp/app/components/navmenu/navmenu.component.html
@@ -24,6 +24,11 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
+                    <a [routerLink]="['/animacoes']">
+                        <span class='glyphicon glyphicon-education'></span> Animações Estudo
+                    </a>
+                </li>
+                <li [routerLinkActive]="['link-active']">
                     <a [routerLink]="['/fetch-data']">
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </a>
