--- a/Estudos_Angular/ClientApp/app/components/ngx-bootstrap/ngx.component.html
+++ b/Estudos_Angular/ClientApp/app/components/ngx-bootstrap/ngx.component.html
@@ -1,8 +1,8 @@
 ﻿<div>
     <tabset>
-        <tab heading="Static title" id="tab1">Static content</tab>
-        <tab heading="Static Title 1">Static content 1</tab>
-        <tab heading="Static Title 2">Static content 2</tab>
+        <tab [active]="" heading="Static title" id="tab1">Static content</tab>
+        <tab [active]="" heading="Static Title 1">Static content 1</tab>
+        <tab [active]="tab == true" heading="Static Title 2">Static content 2</tab>
         <tab (select)="alertMe()">
             <ng-template tabHeading>
                 <span class="badge badge-secondary">Click here!</span>
