--- a/Estudos_Angular/ClientApp/app/components/posts/posts.component.html
+++ b/Estudos_Angular/ClientApp/app/components/posts/posts.component.html
@@ -1,6 +1,11 @@
 ﻿ <link rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+{{ favorite | json }}
+
+<favorite [isFavorite]="EhFavorito" (changeOutput)="onFavoriteChanged($event)"></favorite>
 <input type="text"  class="form-control" placeholder="Title of new post" (keyup.enter)="createPost(title)" #title />
+
 
 <ul class="list-group">
     <li 
