--- a/Estudos_Angular/ClientApp/app/components/caixinhas/caixinhas.component.html
+++ b/Estudos_Angular/ClientApp/app/components/caixinhas/caixinhas.component.html
@@ -1,4 +1,6 @@
-﻿<h2>Caixinhas</h2> 
+﻿<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<favorite [isFavorite]="EhFavorito" (changeOutput)="onFavoriteChanged($event)"></favorite>
+<h2>Caixinhas</h2> 
 <form #f="ngForm">
     <div class="container">
         <div class="form-group">
